syntax = "proto3";

package burdock;
import "types.proto";

message Analysis {
    map<uint32, Component> graph = 1;
    PrivacyDefinition definition = 2;
}

message Component {
    message Field {
        uint32 source_node_id = 1;
        string source_field = 2;
    }

    map<string, Field> arguments = 1;

    oneof value {
        Add add = 2;
        Laplace laplace = 3;
        Literal literal = 4;
        Constant constant = 5;
        Mean mean = 6;
        DataSource datasource = 7;
        DPMeanLaplace dpmeanlaplace = 8;
        Clip clip = 9;
    }

}

message Add {}
message Laplace {
    double epsilon = 1;
}
message Literal {
    NDArray ndarray = 1;
    double numeric = 2;
    string nominal = 3;
}
message Constant {}
message Mean {}
message DataSource {
    string dataset_id = 1;
    string column_id = 2;
}
message DPMeanLaplace {
    double epsilon = 1;
}
message Clip {}
